FIX: use right caret for collapse state of tag and category drops

--- a/app/assets/stylesheets/common/select-kit/tag-drop.scss
+++ b/app/assets/stylesheets/common/select-kit/tag-drop.scss
@@ -7,13 +7,14 @@
         background: $primary-low;
         color: $primary;
         border: 1px solid transparent;
-        padding: 5px 10px;
+        padding: 4.5px 5px 4.5px 10px;
         font-size: $font-0;
         transition: none;
 
         .d-icon {
           opacity: 1;
           font-size: $font-0;
+          margin: 0;
         }
       }
 
